updated some messages and command things, added more infos to graves in chat output